# Kursova-SP

Task 2/: CMakeLists.txt  Makefile  main.cpp
Task 3/: task_script.sh
Task 4/vs_mkr_test1/: Jenkinsfile  stringProcessor.h  test.cpp  test_report.xml
Task 4/vs_mkr_test1/test_repos/x64/Debug/: test_repos.exe.recipe  test_repos.vcxproj.FileListAbsolute.txt
Task 4/vs_mkr_test1/test_repos/x64/Debug/test_repos.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_repos.lastbuildstate
